--- a/list.html
+++ b/list.html
@@ -15,7 +15,8 @@
         <li>Ritu</li>
         <li>Bunty</li>
         <li>Babli</li> 
-        <li>ujjwal</li>
+        <li>ujjwal</li> 
+        <li>ghulam ali</li>
     </ol>
 
     <hr>
